Update: swapped out height for min-height. (refs #GRAZ-150) # Improve the alignment of the cards within the main content grids (Desktop) # Reduce the padding on Mobile (Homepage) 15px left & right on card and container (30px each side in total) # Reduce the overall container "container page-content" from 15px left & right to 10px (To ensure the MPU fits within iphone 5). # Remove drop shadow styling in favour for line below article grid as per Grazia design.

--- a/components/shared/sass/partials.scss
+++ b/components/shared/sass/partials.scss
@@ -84,7 +84,7 @@ body {
   }
   .content-card {
     &__info {
-      height: rem-calc($content-card-content-height);
+      min-height: rem-calc($content-card-content-height);
       display: flex;
       flex-direction: column;
       overflow-wrap: break-word;
